修改圖片位置

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrap">
         <div class="header">
             <a href="#">
-                <h1><img src="/images/logo-all-dark.svg" alt="logo"></h1>
+                <h1><img src="https://yuyu0905.github.io/sweetaste/images/logo-all-dark.svg" alt="logo"></h1>
             </a>
             <div class="nav">
                 <ul class="menu">
@@ -19,11 +19,11 @@
                     <li><a href="#">甜點</a></li>
                     <li><a href="#">登入</a></li>
                 </ul>
-                <a href="#"><img src="/images/shopping_cart.png" alt="購物車"></a>
+                <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/shopping_cart.png" alt="購物車"></a>
             </div>
         </div>
         <div class="banner">
-            <img src="/images/banner.png" alt="banner">
+            <img src="https://yuyu0905.github.io/sweetaste/images/banner.png" alt="banner">
         </div>
         <div class="content">
             <div class="product-menu">
@@ -38,10 +38,10 @@
             <ul class="product-list">
                 <li>
                     <div class="product-img">
-                        <img src="/images/p-1.png" alt="甜點1">
+                        <img src="https://yuyu0905.github.io/sweetaste/images/p-1.png" alt="甜點1">
                         <h4>本日精選</h4>
                         <div class="favorite">
-                            <a href="#"><img src="/images/favorite_border.png" alt="加入最愛"></a>
+                            <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
                     </div>
                     <div class="product-body">
@@ -52,10 +52,10 @@
                 </li>
                 <li>
                     <div class="product-img">
-                        <img src="/images/p-2.png" alt="甜點2">
+                        <img src="https://yuyu0905.github.io/sweetaste/images/p-2.png" alt="甜點2">
                         <h4>本日精選</h4>
                         <div class="favorite">
-                            <a href="#"><img src="/images/favorite_border.png" alt="加入最愛"></a>
+                            <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
                     </div>
                     <div class="product-body">
@@ -66,10 +66,10 @@
                 </li>
                 <li>
                     <div class="product-img">
-                        <img src="/images/p-3.png" alt="甜點3">
+                        <img src="https://yuyu0905.github.io/sweetaste/images/p-3.png" alt="甜點3">
                         <h4>本日精選</h4>
                         <div class="favorite">
-                            <a href="#"><img src="/images/favorite_border.png" alt="加入最愛"></a>
+                            <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
                     </div>
                     <div class="product-body">
@@ -80,10 +80,10 @@
                 </li>
                 <li>
                     <div class="product-img">
-                        <img src="/images/p-4.png" alt="甜點4">
+                        <img src="https://yuyu0905.github.io/sweetaste/images/p-4.png" alt="甜點4">
                         <h4>本日精選</h4>
                         <div class="favorite">
-                            <a href="#"><img src="/images/favorite_border.png" alt="加入最愛"></a>
+                            <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
                     </div>
                     <div class="product-body">
@@ -94,10 +94,10 @@
                 </li>
                 <li>
                     <div class="product-img">
-                        <img src="/images/p-5.png" alt="甜點5">
+                        <img src="https://yuyu0905.github.io/sweetaste/images/p-5.png" alt="甜點5">
                         <h4>本日精選</h4>
                         <div class="favorite">
-                            <a href="#"><img src="/images/favorite_border.png" alt="加入最愛"></a>
+                            <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
                     </div>
                     <div class="product-body">
@@ -108,10 +108,10 @@
                 </li>
                 <li>
                     <div class="product-img">
-                        <img src="/images/p-6.png" alt="甜點6">
+                        <img src="https://yuyu0905.github.io/sweetaste/images/p-6.png" alt="甜點6">
                         <h4>本日精選</h4>
                         <div class="favorite">
-                            <a href="#"><img src="/images/favorite_border.png" alt="加入最愛"></a>
+                            <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
                     </div>
                     <div class="product-body">
@@ -123,11 +123,11 @@
             </ul>
         </div>
         <ul class="pagination">
-            <li><a href="#"><img src="/images/arrow_left.png" alt="上一頁"></a></li>
+            <li><a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/arrow_left.png" alt="上一頁"></a></li>
             <li><a href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
-            <li><a href="#"><img src="/images/arrow_right.png" alt="下一頁"></a></li>
+            <li><a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/arrow_right.png" alt="下一頁"></a></li>
         </ul>
     </div>
 </body>
