1. 左上 logo 不建議用 a 包 h1 的方式，因為通常不會用行內元素包區塊元素，建議改為 h1 > a 的方式設計
2. 本日精選標籤建議改用 p 或 span 標籤

3. 當產品名稱文字變多時，價格會被擠壓導致跑版，例如這個版型，產品跟價格沒設定寬度，導致產品文字變多時，擠壓到右側價格

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="wrap">
         <div class="header">
-            <a href="#">
-                <h1><img src="https://yuyu0905.github.io/sweetaste/images/logo-all-dark.svg" alt="logo"></h1>
-            </a>
+            <h1>
+                <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/logo-all-dark.svg" alt="logo"></a>
+            </h1>
             <div class="nav">
                 <ul class="menu">
                     <li><a href="#">首頁</a></li>
@@ -39,7 +39,7 @@
                 <li>
                     <div class="product-img">
                         <img src="https://yuyu0905.github.io/sweetaste/images/p-1.png" alt="甜點1">
-                        <h4>本日精選</h4>
+                        <p>本日精選</p>
                         <div class="favorite">
                             <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
@@ -53,7 +53,7 @@
                 <li>
                     <div class="product-img">
                         <img src="https://yuyu0905.github.io/sweetaste/images/p-2.png" alt="甜點2">
-                        <h4>本日精選</h4>
+                        <p>本日精選</p>
                         <div class="favorite">
                             <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
@@ -67,7 +67,7 @@
                 <li>
                     <div class="product-img">
                         <img src="https://yuyu0905.github.io/sweetaste/images/p-3.png" alt="甜點3">
-                        <h4>本日精選</h4>
+                        <p>本日精選</p>
                         <div class="favorite">
                             <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
@@ -81,7 +81,7 @@
                 <li>
                     <div class="product-img">
                         <img src="https://yuyu0905.github.io/sweetaste/images/p-4.png" alt="甜點4">
-                        <h4>本日精選</h4>
+                        <p>本日精選</p>
                         <div class="favorite">
                             <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
@@ -95,7 +95,7 @@
                 <li>
                     <div class="product-img">
                         <img src="https://yuyu0905.github.io/sweetaste/images/p-5.png" alt="甜點5">
-                        <h4>本日精選</h4>
+                        <p>本日精選</p>
                         <div class="favorite">
                             <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
@@ -109,7 +109,7 @@
                 <li>
                     <div class="product-img">
                         <img src="https://yuyu0905.github.io/sweetaste/images/p-6.png" alt="甜點6">
-                        <h4>本日精選</h4>
+                        <p>本日精選</p>
                         <div class="favorite">
                             <a href="#"><img src="https://yuyu0905.github.io/sweetaste/images/favorite_border.png" alt="加入最愛"></a>
                         </div>
